--- a/jadwal.html
+++ b/jadwal.html
@@ -1,11 +1,11 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="img/png" href="images/icon.png" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/jadwal.css">
-    <title>My Website - Home</title>
+    <title>My Website - Jadwal</title>
 </head>
 <body>
     <header>
